# ire

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/prompts/: chat_title.md  experiment_wakeup.md  mode_brainstorm.md  mode_experiment.md  resource_confirm.md  resource_summarizer.md
src-tauri/assets/seed/: _SYSTEM.md  _schema.md  failures.md  ire.json  long-term.md  pulse.json  pulse.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_provider.rs  analytics.rs  binary.rs  events.rs  lib.rs  main.rs  session.rs  stream_event.rs  tool_cards.rs  user_config.rs
src-tauri/src/cc/: discovery.rs  mod.rs  session.rs  spawn.rs  stream.rs
src-tauri/src/claude-code/: discovery.rs  mod.rs  session.rs  spawn.rs  stream.rs
src-tauri/src/codex/: discovery.rs  spawn.rs  stream.rs
src-tauri/src/commands/: chat.rs  experiments.rs  feedback.rs  history.rs  ire.rs  mod.rs  resources.rs  system.rs  wiki.rs  workspace.rs
src-tauri/src/db/: migrations.rs  models.rs  schema.rs
src-tauri/src/experiments/: mod.rs  runner.rs  wake.rs
src-tauri/src/ire/: frontmatter.rs  index.rs  mod.rs  store.rs
src-tauri/src/mcp/: config.rs  mod.rs  rpc.rs  stdio_server.rs
src-tauri/src/opencode/: client.rs  config.rs  discovery.rs  events.rs  mod.rs  runtime.rs  spawn.rs  stream.rs  turn.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/resources/: arxiv.rs  fetch.rs  html.rs  local.rs  mod.rs  pdf.rs
src-tauri/src/wiki/: frontmatter.rs  index.rs  (+2 more)
(+111 files in other folders)
